parser.out
Grammar:

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA declaracoes funcoes bloco FIM_PROGRAMA
Rule 2     empty -> <empty>
Rule 3     declaracoes -> <empty>
Rule 4     declaracoes -> declaracoes DECLARE tipo : ID
Rule 5     tipo -> REAL
Rule 6     tipo -> VOID
Rule 7     tipo -> C_CHANNEL
Rule 8     tipo -> STRING
Rule 9     tipo -> BOOL
Rule 10    tipo -> INT
Rule 11    funcoes -> <empty>
Rule 12    funcoes -> funcoes funcao
Rule 13    funcao -> DEF ID LPAREN params RPAREN ARROW tipo declaracoes bloco FIM_DEF
Rule 14    params -> <empty>
Rule 15    params -> param_lista
Rule 16    param_lista -> param
Rule 17    param_lista -> param_lista COMMA param
Rule 18    param -> tipo : ID
Rule 19    bloco -> <empty>
Rule 20    bloco -> bloco comando
Rule 21    comando -> par_bloco
Rule 22    comando -> comando_return
Rule 23    comando -> comando_send
Rule 24    comando -> comando_escreva
Rule 25    comando -> comando_leia
Rule 26    comando -> comando_enquanto
Rule 27    comando -> comando_se
Rule 28    comando -> comando_atribuicao
Rule 29    comando_atribuicao -> ID ASSIGN expr
Rule 30    comando_se -> SE expr ENTAO bloco SENAO bloco FIM_SE
Rule 31    comando_se -> SE expr ENTAO bloco FIM_SE
Rule 32    comando_enquanto -> ENQUANTO expr FACA bloco FIM_ENQUANTO
Rule 33    comando_leia -> LEIA LPAREN ID RPAREN
Rule 34    comando_escreva -> ESCREVA LPAREN expr RPAREN
Rule 35    par_bloco -> PAR bloco FIM_PAR
Rule 36    comando_send -> SEND LPAREN ID COMMA expr RPAREN
Rule 37    comando_return -> RETURN
Rule 38    comando_return -> RETURN expr
Rule 39    expr -> fator_expr GE fator_expr
Rule 40    expr -> fator_expr GT fator_expr
Rule 41    expr -> fator_expr LE fator_expr
Rule 42    expr -> fator_expr LT fator_expr
Rule 43    expr -> fator_expr NE fator_expr
Rule 44    expr -> fator_expr EQ fator_expr
Rule 45    expr -> termo
Rule 46    expr -> expr MENOS termo  [precedence=left, level=1]
Rule 47    expr -> expr MAIS termo  [precedence=left, level=1]
Rule 48    termo -> fator
Rule 49    termo -> termo DIVIDE fator  [precedence=left, level=2]
Rule 50    termo -> termo VEZES fator  [precedence=left, level=2]
Rule 51    fator_expr -> fator
Rule 52    fator -> receive_expr
Rule 53    fator -> call
Rule 54    fator -> LPAREN expr RPAREN
Rule 55    fator -> ID
Rule 56    fator -> STRING_LITERAL
Rule 57    fator -> NUMERO_REAL
Rule 58    fator -> NUMERO_INT
Rule 59    call -> ID LPAREN args RPAREN
Rule 60    receive_expr -> RECEIVE LPAREN ID RPAREN
Rule 61    args -> <empty>
Rule 62    args -> arg_lista
Rule 63    arg_lista -> expr
Rule 64    arg_lista -> arg_lista COMMA expr

Terminals, with rules where they appear:

:                    : 4 18
ARROW                : 13
ASSIGN               : 29
BOOL                 : 9
COMMA                : 17 36 64
C_CHANNEL            : 7
DECLARE              : 4
DEF                  : 13
DIVIDE               : 49
ENQUANTO             : 32
ENTAO                : 30 31
EQ                   : 44
ESCREVA              : 34
FACA                 : 32
FIM_DEF              : 13
FIM_ENQUANTO         : 32
FIM_PAR              : 35
FIM_PROGRAMA         : 1
FIM_SE               : 30 31
GE                   : 39
GT                   : 40
ID                   : 4 13 18 29 33 36 55 59 60
INT                  : 10
LE                   : 41
LEIA                 : 33
LPAREN               : 13 33 34 36 54 59 60
LT                   : 42
MAIS                 : 47
MENOS                : 46
NE                   : 43
NUMERO_INT           : 58
NUMERO_REAL          : 57
PAR                  : 35
PROGRAMA             : 1
REAL                 : 5
RECEIVE              : 60
RETURN               : 37 38
RPAREN               : 13 33 34 36 54 59 60
SE                   : 30 31
SENAO                : 30
SEND                 : 36
STRING               : 8
STRING_LITERAL       : 56
VEZES                : 50
VOID                 : 6
error                : 

Nonterminals, with rules where they appear:

arg_lista            : 62 64
args                 : 59
bloco                : 1 13 20 30 30 31 32 35
call                 : 53
comando              : 20
comando_atribuicao   : 28
comando_enquanto     : 26
comando_escreva      : 24
comando_leia         : 25
comando_return       : 22
comando_se           : 27
comando_send         : 23
declaracoes          : 1 4 13
empty                : 
expr                 : 29 30 31 32 34 36 38 46 47 54 63 64
fator                : 48 49 50 51
fator_expr           : 39 39 40 40 41 41 42 42 43 43 44 44
funcao               : 12
funcoes              : 1 12
par_bloco            : 21
param                : 16 17
param_lista          : 15 17
params               : 13
programa             : 0
receive_expr         : 52
termo                : 45 46 47 49 50
tipo                 : 4 13 18


state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA declaracoes funcoes bloco FIM_PROGRAMA
    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .


state 2

    (1) programa -> PROGRAMA . declaracoes funcoes bloco FIM_PROGRAMA
    (3) declaracoes -> .
    (4) declaracoes -> . declaracoes DECLARE tipo : ID
    DECLARE         reduce using rule 3 (declaracoes -> .)
    DEF             reduce using rule 3 (declaracoes -> .)
    FIM_PROGRAMA    reduce using rule 3 (declaracoes -> .)
    PAR             reduce using rule 3 (declaracoes -> .)
    RETURN          reduce using rule 3 (declaracoes -> .)
    SEND            reduce using rule 3 (declaracoes -> .)
    ESCREVA         reduce using rule 3 (declaracoes -> .)
    LEIA            reduce using rule 3 (declaracoes -> .)
    ENQUANTO        reduce using rule 3 (declaracoes -> .)
    SE              reduce using rule 3 (declaracoes -> .)
    ID              reduce using rule 3 (declaracoes -> .)

    declaracoes                    shift and go to state 3

state 3

    (1) programa -> PROGRAMA declaracoes . funcoes bloco FIM_PROGRAMA
    (4) declaracoes -> declaracoes . DECLARE tipo : ID
    (11) funcoes -> .
    (12) funcoes -> . funcoes funcao
    DECLARE         shift and go to state 5
    DEF             reduce using rule 11 (funcoes -> .)
    FIM_PROGRAMA    reduce using rule 11 (funcoes -> .)
    PAR             reduce using rule 11 (funcoes -> .)
    RETURN          reduce using rule 11 (funcoes -> .)
    SEND            reduce using rule 11 (funcoes -> .)
    ESCREVA         reduce using rule 11 (funcoes -> .)
    LEIA            reduce using rule 11 (funcoes -> .)
    ENQUANTO        reduce using rule 11 (funcoes -> .)
    SE              reduce using rule 11 (funcoes -> .)
    ID              reduce using rule 11 (funcoes -> .)

    funcoes                        shift and go to state 4

state 4

    (1) programa -> PROGRAMA declaracoes funcoes . bloco FIM_PROGRAMA
    (12) funcoes -> funcoes . funcao
    (19) bloco -> .
    (20) bloco -> . bloco comando
    (13) funcao -> . DEF ID LPAREN params RPAREN ARROW tipo declaracoes bloco FIM_DEF
    FIM_PROGRAMA    reduce using rule 19 (bloco -> .)
    PAR             reduce using rule 19 (bloco -> .)
    RETURN          reduce using rule 19 (bloco -> .)
    SEND            reduce using rule 19 (bloco -> .)
    ESCREVA         reduce using rule 19 (bloco -> .)
    LEIA            reduce using rule 19 (bloco -> .)
    ENQUANTO        reduce using rule 19 (bloco -> .)
    SE              reduce using rule 19 (bloco -> .)
    ID              reduce using rule 19 (bloco -> .)
    DEF             shift and go to state 8

    bloco                          shift and go to state 6
    funcao                         shift and go to state 7

state 5

    (4) declaracoes -> declaracoes DECLARE . tipo : ID
    (5) tipo -> . REAL
    (6) tipo -> . VOID
    (7) tipo -> . C_CHANNEL
    (8) tipo -> . STRING
    (9) tipo -> . BOOL
    (10) tipo -> . INT
    REAL            shift and go to state 10
    VOID            shift and go to state 11
    C_CHANNEL       shift and go to state 12
    STRING          shift and go to state 13
    BOOL            shift and go to state 14
    INT             shift and go to state 15

    tipo                           shift and go to state 9

state 6

    (1) programa -> PROGRAMA declaracoes funcoes bloco . FIM_PROGRAMA
    (20) bloco -> bloco . comando
    (21) comando -> . par_bloco
    (22) comando -> . comando_return
    (23) comando -> . comando_send
    (24) comando -> . comando_escreva
    (25) comando -> . comando_leia
    (26) comando -> . comando_enquanto
    (27) comando -> . comando_se
    (28) comando -> . comando_atribuicao
    (35) par_bloco -> . PAR bloco FIM_PAR
    (37) comando_return -> . RETURN
    (38) comando_return -> . RETURN expr
    (36) comando_send -> . SEND LPAREN ID COMMA expr RPAREN
    (34) comando_escreva -> . ESCREVA LPAREN expr RPAREN
    (33) comando_leia -> . LEIA LPAREN ID RPAREN
    (32) comando_enquanto -> . ENQUANTO expr FACA bloco FIM_ENQUANTO
    (30) comando_se -> . SE expr ENTAO bloco SENAO bloco FIM_SE
    (31) comando_se -> . SE expr ENTAO bloco FIM_SE
    (29) comando_atribuicao -> . ID ASSIGN expr
    FIM_PROGRAMA    shift and go to state 16
    PAR             shift and go to state 26
    RETURN          shift and go to state 27
    SEND            shift and go to state 28
    ESCREVA         shift and go to state 30
    LEIA            shift and go to state 31
    ENQUANTO        shift and go to state 32
    SE              shift and go to state 33
    ID              shift and go to state 29

    comando                        shift and go to state 17
    par_bloco                      shift and go to state 18
    comando_return                 shift and go to state 19
    comando_send                   shift and go to state 20
    comando_escreva                shift and go to state 21
    comando_leia                   shift and go to state 22
    comando_enquanto               shift and go to state 23
    comando_se                     shift and go to state 24
    comando_atribuicao             shift and go to state 25

state 7

    (12) funcoes -> funcoes funcao .
    DEF             reduce using rule 12 (funcoes -> funcoes funcao .)
    FIM_PROGRAMA    reduce using rule 12 (funcoes -> funcoes funcao .)
    PAR             reduce using rule 12 (funcoes -> funcoes funcao .)
    RETURN          reduce using rule 12 (funcoes -> funcoes funcao .)
    SEND            reduce using rule 12 (funcoes -> funcoes funcao .)
    ESCREVA         reduce using rule 12 (funcoes -> funcoes funcao .)
    LEIA            reduce using rule 12 (funcoes -> funcoes funcao .)
    ENQUANTO        reduce using rule 12 (funcoes -> funcoes funcao .)
    SE              reduce using rule 12 (funcoes -> funcoes funcao .)
    ID              reduce using rule 12 (funcoes -> funcoes funcao .)


state 8

    (13) funcao -> DEF . ID LPAREN params RPAREN ARROW tipo declaracoes bloco FIM_DEF
    ID              shift and go to state 34


state 9

    (4) declaracoes -> declaracoes DECLARE tipo . : ID
    :               shift and go to state 35


state 10

    (5) tipo -> REAL .
    :               reduce using rule 5 (tipo -> REAL .)
    DECLARE         reduce using rule 5 (tipo -> REAL .)
    FIM_DEF         reduce using rule 5 (tipo -> REAL .)
    PAR             reduce using rule 5 (tipo -> REAL .)
    RETURN          reduce using rule 5 (tipo -> REAL .)
    SEND            reduce using rule 5 (tipo -> REAL .)
    ESCREVA         reduce using rule 5 (tipo -> REAL .)
    LEIA            reduce using rule 5 (tipo -> REAL .)
    ENQUANTO        reduce using rule 5 (tipo -> REAL .)
    SE              reduce using rule 5 (tipo -> REAL .)
    ID              reduce using rule 5 (tipo -> REAL .)


state 11

    (6) tipo -> VOID .
    :               reduce using rule 6 (tipo -> VOID .)
    DECLARE         reduce using rule 6 (tipo -> VOID .)
    FIM_DEF         reduce using rule 6 (tipo -> VOID .)
    PAR             reduce using rule 6 (tipo -> VOID .)
    RETURN          reduce using rule 6 (tipo -> VOID .)
    SEND            reduce using rule 6 (tipo -> VOID .)
    ESCREVA         reduce using rule 6 (tipo -> VOID .)
    LEIA            reduce using rule 6 (tipo -> VOID .)
    ENQUANTO        reduce using rule 6 (tipo -> VOID .)
    SE              reduce using rule 6 (tipo -> VOID .)
    ID              reduce using rule 6 (tipo -> VOID .)


state 12

    (7) tipo -> C_CHANNEL .
    :               reduce using rule 7 (tipo -> C_CHANNEL .)
    DECLARE         reduce using rule 7 (tipo -> C_CHANNEL .)
    FIM_DEF         reduce using rule 7 (tipo -> C_CHANNEL .)
    PAR             reduce using rule 7 (tipo -> C_CHANNEL .)
    RETURN          reduce using rule 7 (tipo -> C_CHANNEL .)
    SEND            reduce using rule 7 (tipo -> C_CHANNEL .)
    ESCREVA         reduce using rule 7 (tipo -> C_CHANNEL .)
    LEIA            reduce using rule 7 (tipo -> C_CHANNEL .)
    ENQUANTO        reduce using rule 7 (tipo -> C_CHANNEL .)
    SE              reduce using rule 7 (tipo -> C_CHANNEL .)
    ID              reduce using rule 7 (tipo -> C_CHANNEL .)


state 13

    (8) tipo -> STRING .
    :               reduce using rule 8 (tipo -> STRING .)
    DECLARE         reduce using rule 8 (tipo -> STRING .)
    FIM_DEF         reduce using rule 8 (tipo -> STRING .)
    PAR             reduce using rule 8 (tipo -> STRING .)
    RETURN          reduce using rule 8 (tipo -> STRING .)
    SEND            reduce using rule 8 (tipo -> STRING .)
    ESCREVA         reduce using rule 8 (tipo -> STRING .)
    LEIA            reduce using rule 8 (tipo -> STRING .)
    ENQUANTO        reduce using rule 8 (tipo -> STRING .)
    SE              reduce using rule 8 (tipo -> STRING .)
    ID              reduce using rule 8 (tipo -> STRING .)


state 14

    (9) tipo -> BOOL .
    :               reduce using rule 9 (tipo -> BOOL .)
    DECLARE         reduce using rule 9 (tipo -> BOOL .)
    FIM_DEF         reduce using rule 9 (tipo -> BOOL .)
    PAR             reduce using rule 9 (tipo -> BOOL .)
    RETURN          reduce using rule 9 (tipo -> BOOL .)
    SEND            reduce using rule 9 (tipo -> BOOL .)
    ESCREVA         reduce using rule 9 (tipo -> BOOL .)
    LEIA            reduce using rule 9 (tipo -> BOOL .)
    ENQUANTO        reduce using rule 9 (tipo -> BOOL .)
    SE              reduce using rule 9 (tipo -> BOOL .)
    ID              reduce using rule 9 (tipo -> BOOL .)


state 15

    (10) tipo -> INT .
    :               reduce using rule 10 (tipo -> INT .)
    DECLARE         reduce using rule 10 (tipo -> INT .)
    FIM_DEF         reduce using rule 10 (tipo -> INT .)
    PAR             reduce using rule 10 (tipo -> INT .)
    RETURN          reduce using rule 10 (tipo -> INT .)
    SEND            reduce using rule 10 (tipo -> INT .)
    ESCREVA         reduce using rule 10 (tipo -> INT .)
    LEIA            reduce using rule 10 (tipo -> INT .)
    ENQUANTO        reduce using rule 10 (tipo -> INT .)
    SE              reduce using rule 10 (tipo -> INT .)
    ID              reduce using rule 10 (tipo -> INT .)


state 16

    (1) programa -> PROGRAMA declaracoes funcoes bloco FIM_PROGRAMA .
    $end            reduce using rule 1 (programa -> PROGRAMA declaracoes funcoes bloco FIM_PROGRAMA .)


state 17

    (20) bloco -> bloco comando .
    FIM_PROGRAMA    reduce using rule 20 (bloco -> bloco comando .)
    PAR             reduce using rule 20 (bloco -> bloco comando .)
    RETURN          reduce using rule 20 (bloco -> bloco comando .)
    SEND            reduce using rule 20 (bloco -> bloco comando .)
    ESCREVA         reduce using rule 20 (bloco -> bloco comando .)
    LEIA            reduce using rule 20 (bloco -> bloco comando .)
    ENQUANTO        reduce using rule 20 (bloco -> bloco comando .)
    SE              reduce using rule 20 (bloco -> bloco comando .)
    ID              reduce using rule 20 (bloco -> bloco comando .)
    FIM_PAR         reduce using rule 20 (bloco -> bloco comando .)
    FIM_ENQUANTO    reduce using rule 20 (bloco -> bloco comando .)
    SENAO           reduce using rule 20 (bloco -> bloco comando .)
    FIM_SE          reduce using rule 20 (bloco -> bloco comando .)
    FIM_DEF         reduce using rule 20 (bloco -> bloco comando .)


state 18

    (21) comando -> par_bloco .
    FIM_PROGRAMA    reduce using rule 21 (comando -> par_bloco .)
    PAR             reduce using rule 21 (comando -> par_bloco .)
    RETURN          reduce using rule 21 (comando -> par_bloco .)
    SEND            reduce using rule 21 (comando -> par_bloco .)
    ESCREVA         reduce using rule 21 (comando -> par_bloco .)
    LEIA            reduce using rule 21 (comando -> par_bloco .)
    ENQUANTO        reduce using rule 21 (comando -> par_bloco .)
    SE              reduce using rule 21 (comando -> par_bloco .)
    ID              reduce using rule 21 (comando -> par_bloco .)
    FIM_PAR         reduce using rule 21 (comando -> par_bloco .)
    FIM_ENQUANTO    reduce using rule 21 (comando -> par_bloco .)
    SENAO           reduce using rule 21 (comando -> par_bloco .)
    FIM_SE          reduce using rule 21 (comando -> par_bloco .)
    FIM_DEF         reduce using rule 21 (comando -> par_bloco .)


state 19

    (22) comando -> comando_return .
    FIM_PROGRAMA    reduce using rule 22 (comando -> comando_return .)
    PAR             reduce using rule 22 (comando -> comando_return .)
    RETURN          reduce using rule 22 (comando -> comando_return .)
    SEND            reduce using rule 22 (comando -> comando_return .)
    ESCREVA         reduce using rule 22 (comando -> comando_return .)
    LEIA            reduce using rule 22 (comando -> comando_return .)
    ENQUANTO        reduce using rule 22 (comando -> comando_return .)
    SE              reduce using rule 22 (comando -> comando_return .)
    ID              reduce using rule 22 (comando -> comando_return .)
    FIM_PAR         reduce using rule 22 (comando -> comando_return .)
    FIM_ENQUANTO    reduce using rule 22 (comando -> comando_return .)
    SENAO           reduce using rule 22 (comando -> comando_return .)
    FIM_SE          reduce using rule 22 (comando -> comando_return .)
    FIM_DEF         reduce using rule 22 (comando -> comando_return .)


state 20

    (23) comando -> comando_send .
    FIM_PROGRAMA    reduce using rule 23 (comando -> comando_send .)
    PAR             reduce using rule 23 (comando -> comando_send .)
    RETURN          reduce using rule 23 (comando -> comando_send .)
    SEND            reduce using rule 23 (comando -> comando_send .)
    ESCREVA         reduce using rule 23 (comando -> comando_send .)
    LEIA            reduce using rule 23 (comando -> comando_send .)
    ENQUANTO        reduce using rule 23 (comando -> comando_send .)
    SE              reduce using rule 23 (comando -> comando_send .)
    ID              reduce using rule 23 (comando -> comando_send .)
    FIM_PAR         reduce using rule 23 (comando -> comando_send .)
    FIM_ENQUANTO    reduce using rule 23 (comando -> comando_send .)
    SENAO           reduce using rule 23 (comando -> comando_send .)
    FIM_SE          reduce using rule 23 (comando -> comando_send .)
    FIM_DEF         reduce using rule 23 (comando -> comando_send .)


state 21

    (24) comando -> comando_escreva .
    FIM_PROGRAMA    reduce using rule 24 (comando -> comando_escreva .)
    PAR             reduce using rule 24 (comando -> comando_escreva .)
    RETURN          reduce using rule 24 (comando -> comando_escreva .)
    SEND            reduce using rule 24 (comando -> comando_escreva .)
    ESCREVA         reduce using rule 24 (comando -> comando_escreva .)
    LEIA            reduce using rule 24 (comando -> comando_escreva .)
    ENQUANTO        reduce using rule 24 (comando -> comando_escreva .)
    SE              reduce using rule 24 (comando -> comando_escreva .)
    ID              reduce using rule 24 (comando -> comando_escreva .)
    FIM_PAR         reduce using rule 24 (comando -> comando_escreva .)
    FIM_ENQUANTO    reduce using rule 24 (comando -> comando_escreva .)
    SENAO           reduce using rule 24 (comando -> comando_escreva .)
    FIM_SE          reduce using rule 24 (comando -> comando_escreva .)
    FIM_DEF         reduce using rule 24 (comando -> comando_escreva .)


state 22

    (25) comando -> comando_leia .
    FIM_PROGRAMA    reduce using rule 25 (comando -> comando_leia .)
    PAR             reduce using rule 25 (comando -> comando_leia .)
    RETURN          reduce using rule 25 (comando -> comando_leia .)
    SEND            reduce using rule 25 (comando -> comando_leia .)
    ESCREVA         reduce using rule 25 (comando -> comando_leia .)
    LEIA            reduce using rule 25 (comando -> comando_leia .)
    ENQUANTO        reduce using rule 25 (comando -> comando_leia .)
    SE              reduce using rule 25 (comando -> comando_leia .)
    ID              reduce using rule 25 (comando -> comando_leia .)
    FIM_PAR         reduce using rule 25 (comando -> comando_leia .)
    FIM_ENQUANTO    reduce using rule 25 (comando -> comando_leia .)
    SENAO           reduce using rule 25 (comando -> comando_leia .)
    FIM_SE          reduce using rule 25 (comando -> comando_leia .)
    FIM_DEF         reduce using rule 25 (comando -> comando_leia .)


state 23

    (26) comando -> comando_enquanto .
    FIM_PROGRAMA    reduce using rule 26 (comando -> comando_enquanto .)
    PAR             reduce using rule 26 (comando -> comando_enquanto .)
    RETURN          reduce using rule 26 (comando -> comando_enquanto .)
    SEND            reduce using rule 26 (comando -> comando_enquanto .)
    ESCREVA         reduce using rule 26 (comando -> comando_enquanto .)
    LEIA            reduce using rule 26 (comando -> comando_enquanto .)
    ENQUANTO        reduce using rule 26 (comando -> comando_enquanto .)
    SE              reduce using rule 26 (comando -> comando_enquanto .)
    ID              reduce using rule 26 (comando -> comando_enquanto .)
    FIM_PAR         reduce using rule 26 (comando -> comando_enquanto .)
    FIM_ENQUANTO    reduce using rule 26 (comando -> comando_enquanto .)
    SENAO           reduce using rule 26 (comando -> comando_enquanto .)
    FIM_SE          reduce using rule 26 (comando -> comando_enquanto .)
    FIM_DEF         reduce using rule 26 (comando -> comando_enquanto .)


state 24

    (27) comando -> comando_se .
    FIM_PROGRAMA    reduce using rule 27 (comando -> comando_se .)
    PAR             reduce using rule 27 (comando -> comando_se .)
    RETURN          reduce using rule 27 (comando -> comando_se .)
    SEND            reduce using rule 27 (comando -> comando_se .)
    ESCREVA         reduce using rule 27 (comando -> comando_se .)
    LEIA            reduce using rule 27 (comando -> comando_se .)
    ENQUANTO        reduce using rule 27 (comando -> comando_se .)
    SE              reduce using rule 27 (comando -> comando_se .)
    ID              reduce using rule 27 (comando -> comando_se .)
    FIM_PAR         reduce using rule 27 (comando -> comando_se .)
    FIM_ENQUANTO    reduce using rule 27 (comando -> comando_se .)
    SENAO           reduce using rule 27 (comando -> comando_se .)
    FIM_SE          reduce using rule 27 (comando -> comando_se .)
    FIM_DEF         reduce using rule 27 (comando -> comando_se .)


state 25

    (28) comando -> comando_atribuicao .
    FIM_PROGRAMA    reduce using rule 28 (comando -> comando_atribuicao .)
    PAR             reduce using rule 28 (comando -> comando_atribuicao .)
    RETURN          reduce using rule 28 (comando -> comando_atribuicao .)
    SEND            reduce using rule 28 (comando -> comando_atribuicao .)
    ESCREVA         reduce using rule 28 (comando -> comando_atribuicao .)
    LEIA            reduce using rule 28 (comando -> comando_atribuicao .)
    ENQUANTO        reduce using rule 28 (comando -> comando_atribuicao .)
    SE              reduce using rule 28 (comando -> comando_atribuicao .)
    ID              reduce using rule 28 (comando -> comando_atribuicao .)
    FIM_PAR         reduce using rule 28 (comando -> comando_atribuicao .)
    FIM_ENQUANTO    reduce using rule 28 (comando -> comando_atribuicao .)
    SENAO           reduce using rule 28 (comando -> comando_atribuicao .)
    FIM_SE          reduce using rule 28 (comando -> comando_atribuicao .)
    FIM_DEF         reduce using rule 28 (comando -> comando_atribuicao .)


state 26

    (35) par_bloco -> PAR . bloco FIM_PAR
    (19) bloco -> .
    (20) bloco -> . bloco comando
    FIM_PAR         reduce using rule 19 (bloco -> .)
    PAR             reduce using rule 19 (bloco -> .)
    RETURN          reduce using rule 19 (bloco -> .)
    SEND            reduce using rule 19 (bloco -> .)
    ESCREVA         reduce using rule 19 (bloco -> .)
    LEIA            reduce using rule 19 (bloco -> .)
    ENQUANTO        reduce using rule 19 (bloco -> .)
    SE              reduce using rule 19 (bloco -> .)
    ID              reduce using rule 19 (bloco -> .)

    bloco                          shift and go to state 36

state 27

    (37) comando_return -> RETURN .
    (38) comando_return -> RETURN . expr
    (39) expr -> . fator_expr GE fator_expr
    (40) expr -> . fator_expr GT fator_expr
    (41) expr -> . fator_expr LE fator_expr
    (42) expr -> . fator_expr LT fator_expr
    (43) expr -> . fator_expr NE fator_expr
    (44) expr -> . fator_expr EQ fator_expr
    (45) expr -> . termo
    (46) expr -> . expr MENOS termo
    (47) expr -> . expr MAIS termo
    (51) fator_expr -> . fator
    (48) termo -> . fator
    (49) termo -> . termo DIVIDE fator
    (50) termo -> . termo VEZES fator
    (52) fator -> . receive_expr
    (53) fator -> . call
    (54) fator -> . LPAREN expr RPAREN
    (55) fator -> . ID
    (56) fator -> . STRING_LITERAL
    (57) fator -> . NUMERO_REAL
    (58) fator -> . NUMERO_INT
    (60) receive_expr -> . RECEIVE LPAREN ID RPAREN
    (59) call -> . ID LPAREN args RPAREN
  ! shift/reduce conflict for ID resolved as shift
    FIM_PROGRAMA    reduce using rule 37 (comando_return -> RETURN .)
    PAR             reduce using rule 37 (comando_return -> RETURN .)
    RETURN          reduce using rule 37 (comando_return -> RETURN .)
    SEND            reduce using rule 37 (comando_return -> RETURN .)
    ESCREVA         reduce using rule 37 (comando_return -> RETURN .)
    LEIA            reduce using rule 37 (comando_return -> RETURN .)
    ENQUANTO        reduce using rule 37 (comando_return -> RETURN .)
    SE              reduce using rule 37 (comando_return -> RETURN .)
    FIM_PAR         reduce using rule 37 (comando_return -> RETURN .)
    FIM_ENQUANTO    reduce using rule 37 (comando_return -> RETURN .)
    SENAO           reduce using rule 37 (comando_return -> RETURN .)
    FIM_SE          reduce using rule 37 (comando_return -> RETURN .)
    FIM_DEF         reduce using rule 37 (comando_return -> RETURN .)
    LPAREN          shift and go to state 43
    ID              shift and go to state 44
    STRING_LITERAL  shift and go to state 45
    NUMERO_REAL     shift and go to state 46
    NUMERO_INT      shift and go to state 47
    RECEIVE         shift and go to state 48

    expr                           shift and go to state 37
    fator_expr                     shift and go to state 38
    termo                          shift and go to state 39
    fator                          shift and go to state 40
    receive_expr                   shift and go to state 41
    call                           shift and go to state 42

state 28

    (36) comando_send -> SEND . LPAREN ID COMMA expr RPAREN
    LPAREN          shift and go to state 49


state 29

    (29) comando_atribuicao -> ID . ASSIGN expr
    ASSIGN          shift and go to state 50


state 30

    (34) comando_escreva -> ESCREVA . LPAREN expr RPAREN
    LPAREN          shift and go to state 51


state 31

    (33) comando_leia -> LEIA . LPAREN ID RPAREN
    LPAREN          shift and go to state 52


state 32

    (32) comando_enquanto -> ENQUANTO . expr FACA bloco FIM_ENQUANTO
    (39) expr -> . fator_expr GE fator_expr
    (40) expr -> . fator_expr GT fator_expr
    (41) expr -> . fator_expr LE fator_expr
    (42) expr -> . fator_expr LT fator_expr
    (43) expr -> . fator_expr NE fator_expr
    (44) expr -> . fator_expr EQ fator_expr
    (45) expr -> . termo
    (46) expr -> . expr MENOS termo
    (47) expr -> . expr MAIS termo
    (51) fator_expr -> . fator
    (48) termo -> . fator
    (49) termo -> . termo DIVIDE fator
    (50) termo -> . termo VEZES fator
    (52) fator -> . receive_expr
    (53) fator -> . call
    (54) fator -> . LPAREN expr RPAREN
    (55) fator -> . ID
    (56) fator -> . STRING_LITERAL
    (57) fator -> . NUMERO_REAL
    (58) fator -> . NUMERO_INT
    (60) receive_expr -> . RECEIVE LPAREN ID RPAREN
    (59) call -> . ID LPAREN args RPAREN
    LPAREN          shift and go to state 43
    ID              shift and go to state 44
    STRING_LITERAL  shift and go to state 45
    NUMERO_REAL     shift and go to state 46
    NUMERO_INT      shift and go to state 47
    RECEIVE         shift and go to state 48

    expr                           shift and go to state 53
    fator_expr                     shift and go to state 38
    termo                          shift and go to state 39
    fator                          shift and go to state 40
    receive_expr                   shift and go to state 41
    call                           shift and go to state 42

state 33

    (30) comando_se -> SE . expr ENTAO bloco SENAO bloco FIM_SE
    (31) comando_se -> SE . expr ENTAO bloco FIM_SE
    (39) expr -> . fator_expr GE fator_expr
    (40) expr -> . fator_expr GT fator_expr
    (41) expr -> . fator_expr LE fator_expr
    (42) expr -> . fator_expr LT fator_expr
    (43) expr -> . fator_expr NE fator_expr
    (44) expr -> . fator_expr EQ fator_expr
    (45) expr -> . termo
    (46) expr -> . expr MENOS termo
    (47) expr -> . expr MAIS termo
    (51) fator_expr -> . fator
    (48) termo -> . fator
    (49) termo -> . termo DIVIDE fator
    (50) termo -> . termo VEZES fator
    (52) fator -> . receive_expr
    (53) fator -> . call
    (54) fator -> . LPAREN expr RPAREN
    (55) fator -> . ID
    (56) fator -> . STRING_LITERAL
    (57) fator -> . NUMERO_REAL
    (58) fator -> . NUMERO_INT
    (60) receive_expr -> . RECEIVE LPAREN ID RPAREN
    (59) call -> . ID LPAREN args RPAREN
    LPAREN          shift and go to state 43
    ID              shift and go to state 44
    STRING_LITERAL  shift and go to state 45
    NUMERO_REAL     shift and go to state 46
    NUMERO_INT      shift and go to state 47
    RECEIVE         shift and go to state 48

    expr                           shift and go to state 54
    fator_expr                     shift and go to state 38
    termo                          shift and go to state 39
    fator                          shift and go to state 40
    receive_expr                   shift and go to state 41
    call                           shift and go to state 42

state 34

    (13) funcao -> DEF ID . LPAREN params RPAREN ARROW tipo declaracoes bloco FIM_DEF
    LPAREN          shift and go to state 55


state 35

    (4) declaracoes -> declaracoes DECLARE tipo : . ID
    ID              shift and go to state 56


state 36

    (35) par_bloco -> PAR bloco . FIM_PAR
    (20) bloco -> bloco . comando
    (21) comando -> . par_bloco
    (22) comando -> . comando_return
    (23) comando -> . comando_send
    (24) comando -> . comando_escreva
    (25) comando -> . comando_leia
    (26) comando -> . comando_enquanto
    (27) comando -> . comando_se
    (28) comando -> . comando_atribuicao
    (35) par_bloco -> . PAR bloco FIM_PAR
    (37) comando_return -> . RETURN
    (38) comando_return -> . RETURN expr
    (36) comando_send -> . SEND LPAREN ID COMMA expr RPAREN
    (34) comando_escreva -> . ESCREVA LPAREN expr RPAREN
    (33) comando_leia -> . LEIA LPAREN ID RPAREN
    (32) comando_enquanto -> . ENQUANTO expr FACA bloco FIM_ENQUANTO
    (30) comando_se -> . SE expr ENTAO bloco SENAO bloco FIM_SE
    (31) comando_se -> . SE expr ENTAO bloco FIM_SE
    (29) comando_atribuicao -> . ID ASSIGN expr
    FIM_PAR         shift and go to state 57
    PAR             shift and go to state 26
    RETURN          shift and go to state 27
    SEND            shift and go to state 28
    ESCREVA         shift and go to state 30
    LEIA            shift and go to state 31
    ENQUANTO        shift and go to state 32
    SE              shift and go to state 33
    ID              shift and go to state 29

    comando                        shift and go to state 17
    par_bloco                      shift and go to state 18
    comando_return                 shift and go to state 19
    comando_send                   shift and go to state 20
    comando_escreva                shift and go to state 21
    comando_leia                   shift and go to state 22
    comando_enquanto               shift and go to state 23
    comando_se                     shift and go to state 24
    comando_atribuicao             shift and go to state 25

state 37
